--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,11 @@ dash-table==5.0.0
 dash_daq==0.5.0
 datasets==4.0.0
 dateparser==1.2.2
+Django==5.1.4
+django-cors-headers==4.6.0
+djangorestframework==3.15.2
+channels==4.1.0
+uvicorn==0.32.0
 decorator==5.2.1
 dill==0.3.8
 distro==1.9.0
