--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "pinia": "^2.1.7",
+    "three": "^0.170.0",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
