--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ web/collected_static/
 data/news/ethical_news.parquet
 data/public_api_cache/
 data/news/cache/
+data/cache/datasets/
+data/market_snapshots_history/
