--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,12 @@ web/frontend/.cache/
 logs/
 web/collected_static/
 data/news/ethical_news.parquet
+data/news/free_news.parquet
+data/news/free_news/
 data/public_api_cache/
 data/news/cache/
 data/cache/datasets/
+data/intermediate/synthetic_ohlcv/
 data/market_snapshots_history/
 orchestration/dependency_state.json
+runtime/
