--- a/requirements.txt
+++ b/requirements.txt
@@ -181,6 +181,7 @@ scikit-learn==1.7.1
 scipy==1.15.3
 seaborn==0.13.2
 setuptools==80.9.0
+setproctitle>=1.3.3
 sgmllib3k==1.0.0
 simplejson==3.20.1
 six==1.17.0
