--- a/requirements.txt
+++ b/requirements.txt
@@ -193,6 +193,7 @@ squarify==0.4.4
 stack-data==0.6.3
 statsmodels==0.14.5
 strsimpy==0.2.1
+psycopg[binary]==3.1.19
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
 tensorflow==2.19.0
