--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -13,15 +13,20 @@
   "dependencies": {
     "axios": "^1.7.9",
     "pinia": "^2.1.7",
+    "quasar": "^2.16.6",
     "three": "^0.170.0",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@quasar/extras": "^1.16.9",
+    "@quasar/vite-plugin": "^1.9.0",
     "@types/node": "^22.10.5",
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
+    "playwright": "^1.57.0",
     "postcss": "^8.4.49",
+    "sass": "^1.77.6",
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.3",
     "vite": "^6.0.5"
