--- a/requirements.txt
+++ b/requirements.txt
@@ -145,6 +145,7 @@ protobuf==4.25.8
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyarrow==21.0.0
+psutil==6.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
