--- a/requirements.txt
+++ b/requirements.txt
@@ -57,7 +57,7 @@ eth-rlp==2.2.0
 eth-typing==5.2.1
 eth-utils==5.3.0
 eth_abi==5.2.0
-evdev==1.9.2
+evdev==1.9.2; platform_system == "Linux"
 exceptiongroup==1.3.0
 executing==2.2.1
 feedparser==6.0.11
@@ -162,7 +162,7 @@ PyQtWebEngine==5.15.7
 PyQtWebEngine-Qt5==5.15.17
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
-python-xlib==0.33
+python-xlib==0.33; platform_system == "Linux"
 pytz==2025.2
 pyunormalize==16.0.0
 PyYAML==6.0.2
@@ -182,7 +182,8 @@ scikit-learn==1.7.1
 scipy==1.15.3
 seaborn==0.13.2
 setuptools==80.9.0
-setproctitle>=1.3.3
+setproctitle>=1.3.3; platform_system != "Windows"
+pywin32==306; platform_system == "Windows"
 sgmllib3k==1.0.0
 simplejson==3.20.1
 six==1.17.0
