--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 cryptography>=3.4.8
 pycryptodome>=3.15.0
 textual>=7.5.0
+requests>=2.31.0
+pandas>=2.1.0
+aiohttp>=3.9.0
+async-timeout>=4.0.3
+beautifulsoup4>=4.12.2
+feedparser>=6.0.11
