--- a/.github/workflows/paved-road.yml
+++ b/.github/workflows/paved-road.yml
@@ -31,11 +31,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
-          python -m pip install ruff bandit pip-audit build
+          python -m pip install pytest ruff bandit pip-audit build
 
       - name: Fast unit & contract tests
         run: |
-          pytest -q --maxfail=1 --disable-warnings
+          python -m pytest -q --maxfail=1 --disable-warnings
 
       - name: Lint (style/format)
         run: |
