--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,7 @@ beautifulsoup4>=4.12.2
 feedparser>=6.0.11
 Pillow>=10.0.0
 kuzu>=0.4.0
+Django>=4.2
+djangorestframework>=3.14.0
+channels>=4.0.0
+psycopg[binary]>=3.1.0
