--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,14 @@ cryptography>=3.4.8
 pycryptodome>=3.15.0
 textual>=7.5.0
 requests>=2.31.0
-pandas>=2.1.0
+pandas>=2.1.0; python_version>="3.9"
+pandas>=1.5.3; python_version<"3.9"
 aiohttp>=3.9.0
 async-timeout>=4.0.3
 beautifulsoup4>=4.12.2
 feedparser>=6.0.11
 Pillow>=10.0.0
-kuzu>=0.4.0
+kuzu>=0.4.0; python_version>="3.9"
 Django>=4.2
 djangorestframework>=3.14.0
 channels>=4.0.0
