--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ cryptography>=3.4.8
 pycryptodome>=3.15.0
 textual>=7.5.0
 requests>=2.31.0
+web3>=6.14.0
+eth-account>=0.10.0
+hexbytes>=0.3.1
 pandas>=2.1.0; python_version>="3.9"
 pandas>=1.5.3; python_version<"3.9"
 aiohttp>=3.9.0
