--- a/requirements_legacy.txt
+++ b/requirements_legacy.txt
@@ -2,6 +2,9 @@ cryptography>=3.4.8
 pycryptodome>=3.15.0
 textual>=0.41.0
 requests>=2.31.0
+web3>=6.14.0
+eth-account>=0.10.0
+hexbytes>=0.3.1
 pandas>=1.5.3
 aiohttp>=3.8.6
 async-timeout>=4.0.3
